--- a/style.css
+++ b/style.css
@@ -2,6 +2,25 @@ html, body {
     margin: 0;
     padding: 0;
   }
-  canvas {
-    display: block;
-  }
+canvas {
+  display: block;
+}
+#loading-screen { /* color, font, and style for the loading page*/
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(100, 193, 232, 1.0); /*background */
+  color: white;
+  font-size: 35px;
+  font-family: 'PixelFont', sans-serif; /* Apply PixelFont */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  display: none; /* Hide by default */
+}
+
+@font-face { /* load in new font name is PixelFont*/
+  font-family: 'PixelFont';
+  src: url('graphics/pixelFont.ttf') format('truetype');
+}
