--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ canvas {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba(100, 193, 232, 1.0); /*background */
+  background: rgb(100, 193, 232); /*background */
   color: white;
   font-size: 35px;
   font-family: 'PixelFont', sans-serif; /* Apply PixelFont */
